// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildBlock properly formats the rule metadata 1`] = `
"<!-- begin rule list -->
**Key**: :heavy_check_mark: = recommended, :wrench: = fixable
| Name | Description | :heavy_check_mark: | :wrench: |
| ---- | ----------- | ------------------ | -------- |
| [\`awesome/foo\`](./docs/rules/foo.md) | Ensure that foo is used instead of bar (Magical!) | :heavy_check_mark: |  |
| [\`awesome/no-baz\`](./docs/rules/no-baz.md) | Ensure that baz is not used (Unicorns, \`Rainbows\`) |  |  |
| [\`awesome/r\`](./docs/rules/r.md) | Require your code to be super awesome! |  | :wrench: |
<!-- end rule list -->"
`;

exports[`updateReadme appends the block if it doesn’t exist 1`] = `
"# eslint-plugin-test
Some description
(I’m real lazy :()
More description


<!-- begin rule list -->
**Key**: :heavy_check_mark: = recommended, :wrench: = fixable
| Name | Description | :heavy_check_mark: | :wrench: |
| ---- | ----------- | ------------------ | -------- |
| [\`awesome/foo\`](./docs/rules/foo.md) | Ensure that foo is used instead of bar (Magical!) | :heavy_check_mark: |  |
| [\`awesome/no-baz\`](./docs/rules/no-baz.md) | Ensure that baz is not used (Unicorns, \`Rainbows\`) |  |  |
| [\`awesome/r\`](./docs/rules/r.md) | Require your code to be super awesome! |  | :wrench: |
<!-- end rule list -->
"
`;

exports[`updateReadme is case-insensitive 1`] = `
"# ESLINT-PLUGIN-TEST
SOME DESCRIPTION
<!-- begin rule list -->
**Key**: :heavy_check_mark: = recommended, :wrench: = fixable
| Name | Description | :heavy_check_mark: | :wrench: |
| ---- | ----------- | ------------------ | -------- |
| [\`awesome/foo\`](./docs/rules/foo.md) | Ensure that foo is used instead of bar (Magical!) | :heavy_check_mark: |  |
| [\`awesome/no-baz\`](./docs/rules/no-baz.md) | Ensure that baz is not used (Unicorns, \`Rainbows\`) |  |  |
| [\`awesome/r\`](./docs/rules/r.md) | Require your code to be super awesome! |  | :wrench: |
<!-- end rule list -->
MORE DESCRIPTION
"
`;

exports[`updateReadme replaces the block if it’s already present 1`] = `
"# eslint-plugin-test
Some description
<!-- begin rule list -->
**Key**: :heavy_check_mark: = recommended, :wrench: = fixable
| Name | Description | :heavy_check_mark: | :wrench: |
| ---- | ----------- | ------------------ | -------- |
| [\`awesome/foo\`](./docs/rules/foo.md) | Ensure that foo is used instead of bar (Magical!) | :heavy_check_mark: |  |
| [\`awesome/no-baz\`](./docs/rules/no-baz.md) | Ensure that baz is not used (Unicorns, \`Rainbows\`) |  |  |
| [\`awesome/r\`](./docs/rules/r.md) | Require your code to be super awesome! |  | :wrench: |
<!-- end rule list -->
More description
"
`;
